Fixing the height of the social buttons to avoid flickering on font load.

--- a/assets/less/components/social.less
+++ b/assets/less/components/social.less
@@ -13,6 +13,8 @@
 		background: orange;
 		display: block;
 		margin-left: 4px;
+		min-height: 54px;
+		height: 54px;
 
 		a {
 
